bk_ida/gobmkida/c3/get_last_player
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/get_last_player/src/engine/board.c:1486:8: error: use of undeclared identifier 'dword_9C6C1C'
return dword_9C6C1C[move_history_pointer]; 
       ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/get_last_player/src/obj/1/board.o] Error 1
